RESOLVED FIXED 90875
[Qt][WK2] ASSERT: "!m_viewportItem->isMoving()" in QtViewportHandler::flickMoveEnded()
https://bugs.webkit.org/show_bug.cgi?id=90875
Summary [Qt][WK2] ASSERT: "!m_viewportItem->isMoving()" in QtViewportHandler::flickMo...
Andras Becsi
Reported 2012-07-10 06:05:46 PDT
[Qt][WK2] ASSERT: "!m_viewportItem->isMoving()" in QtViewportHandler::flickMoveEnded()
Attachments
Patch (3.86 KB, patch)
2012-07-10 06:07 PDT, Andras Becsi
no flags
Andras Becsi
Comment 1 2012-07-10 06:07:39 PDT
Kenneth Rohde Christiansen
Comment 2 2012-07-10 22:13:45 PDT
Comment on attachment 151449 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=151449&action=review > Source/WebKit2/UIProcess/API/qt/qquickwebview.cpp:1661 > + // touch events too, thus to hinder the canvas from sending synthesized remove "too"? > Source/WebKit2/UIProcess/API/qt/qquickwebview.cpp:1663 > + // childMouseEventFilter and filter incomming touch events as well. incoming*
Andras Becsi
Comment 3 2012-07-11 02:43:13 PDT
Andras Becsi
Comment 4 2012-07-11 02:43:50 PDT
Comment on attachment 151449 [details] Patch Clearing flags from attachment.
Csaba Osztrogonác
Comment 5 2012-07-11 03:14:46 PDT
(In reply to comment #3) > Committed r122318: <http://trac.webkit.org/changeset/122318> It made 11 tests fail. Could you check it, please? Here is the new bug report: https://bugs.webkit.org/show_bug.cgi?id=90960
WebKit Review Bot
Comment 6 2012-07-11 03:38:51 PDT
Re-opened since this is blocked by 90961
Andras Becsi
Comment 7 2012-07-12 03:05:04 PDT
Note You need to log in before you can comment on or make changes to this bug.